@startuml Argsflix bucket list
class App{
    # bucket_list: Bucket_list
    # hentet_data: Søke_resultat
    + kjør()
    # vis_grensesnitt()
    # lagre_data()
}

class Bucket_list{
    # Favoritter: List[Multimedium]
    # Sett: List[str]

    # lag_bucketlist(): @classmethod
    # legg_til_bucketlist()
    # fjerne_fra_bucketlist()
}

class Søke_resultat{
    # hentet_data: List[Multimedium]
    # hent_data()
}

class Multimedium{
    data : dictionary
    # tittel: str
    # utgivelsesår: int
    # ratings: List
    # skuespillere: List
    # sjanger: List
    # plot: str
    # id: int
}

class Film{
    runtime: int
    __str__()
}

class Serie{
    totalSeasons: int
    __str__()
}


Multimedium <|-- Film
Multimedium <|-- Serie
Bucket_list "1" *-right- "*" Multimedium 
App "1" *-down- "1" Bucket_list
App "1" *-right- "1" Søke_resultat
Søke_resultat "1" *-right- "*" Multimedium 

@enduml